Create the index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Showcase</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="profile-info">
+                <h1>[Your Name]</h1>
+                <p class="student-number">Student Number: [Your Student Number]</p>
+                <p class="academic-title">[Your Academic Title]</p>
+                <p class="commercial-title">[Your Commercial Title]</p>
+            </div>
+        </div>
+    </header>
+
+    <main class="project-section">
+        <div class="container">
+            <div class="project-container">
+                <div class="project-info">
+                    <h2>Project Overview</h2>
+                    <p class="project-description">
+                        [Your Project Description]
+                    </p>
+                    <a href="[Your Project URL]" class="project-link" target="_blank">View Project</a>
+                </div>
+                <div class="project-image-container">
+                    <img src="[Your Project Image URL]" alt="Project Preview" class="project-image">
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
